unpackaged/main/default/objects/Case/fields/Call_Type__c.field-meta.xml
<CustomField>
    <fullName>Call_Type__c</fullName>
    <description>Call Type from Epic Inbasket message</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Call Type from Epic Inbasket message</inlineHelpText>
    <label>Call Type</label>
    <length>55</length>
    <type>Text</type>
</CustomField>