unpackaged/main/default/objects/Case/fields/Caller__c.field-meta.xml
<CustomField>
    <fullName>Caller__c</fullName>
    <label>Caller</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PatientProspect</fullName>
                <label>Patient/Prospect</label>
            </value>
            <value>
                <fullName>Guardian</fullName>
            </value>
            <value>
                <fullName>Payor</fullName>
            </value>
            <value>
                <fullName>Pharmacy</fullName>
            </value>
            <value>
                <fullName>Provider/Physician Office</fullName>
            </value>
            <value>
                <fullName>Insurance Carrier</fullName>
            </value>
            <value>
                <fullName>Junk/Robo-Fax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>