unpackaged/main/default/objects/Case/fields/Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Reason__c</fullName>
    <label>Closed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Appointment Scheduled</fullName>
            </value>
            <value>
                <fullName>Could Not Reach</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Forms Completed</fullName>
            </value>
            <value>
                <fullName>Message Sent to MA</fullName>
            </value>
            <value>
                <fullName>Message Sent to Provider</fullName>
            </value>
            <value>
                <fullName>Provided Billing Information</fullName>
            </value>
            <value>
                <fullName>Provided Lab Orders and Lab Information</fullName>
            </value>
            <value>
                <fullName>Provided Medical Records</fullName>
            </value>
            <value>
                <fullName>Provided Referral Information</fullName>
            </value>
            <value>
                <fullName>Provided Requested Information</fullName>
            </value>
            <value>
                <fullName>Refilled Prescription</fullName>
            </value>
            <value>
                <fullName>Sent Notes to Provider</fullName>
            </value>
            <value>
                <fullName>Sent Out Labs</fullName>
            </value>
            <value>
                <fullName>Sent Pharmacy Information</fullName>
            </value>
            <value>
                <fullName>Transferred Caller</fullName>
            </value>
            <value>
                <fullName>Outdated Case</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>