unpackaged/main/default/objects/Case/fields/Consumer_s_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Consumer_s_Birthdate__c</fullName>
    <formula>Contact.Birthdate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consumer&#39;s Birthdate</label>
    <type>Date</type>
</CustomField>