unpackaged/main/default/objects/Case/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <description>Contact Name from Epic Inbasket record.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Contact Name from Epic Inbasket record.</inlineHelpText>
    <label>Contact Name</label>
    <length>55</length>
    <type>Text</type>
</CustomField>