unpackaged/main/default/objects/Case/fields/Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone__c</fullName>
    <description>Contact Phone field from Epic Inbasket record.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Contact Phone field from Epic Inbasket record.</inlineHelpText>
    <label>Contact Phone</label>
    <type>Phone</type>
</CustomField>