unpackaged/main/default/objects/Case/fields/Declined_Reason__c.field-meta.xml
<CustomField>
    <fullName>Declined_Reason__c</fullName>
    <inlineHelpText>This field only needs to be populated if &quot;Declined&quot; is chosen for the &quot;Closed Reason&quot; field</inlineHelpText>
    <label>Declined Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appointment Too Far in the Future</fullName>
            </value>
            <value>
                <fullName>Location Not Convenient</fullName>
            </value>
            <value>
                <fullName>No Insurance</fullName>
            </value>
            <value>
                <fullName>Not Eligible</fullName>
            </value>
            <value>
                <fullName>Patient Changed Mind</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>