unpackaged/main/default/objects/Case/fields/Escalated_Reason__c.field-meta.xml
<CustomField>
    <fullName>Escalated_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please provide details on why this case is being escalated</inlineHelpText>
    <label>Escalated Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>