unpackaged/main/default/objects/Case/fields/In_Progress_Reason__c.field-meta.xml
<CustomField>
    <fullName>In_Progress_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please provide details on why this case is being left &#39;In Progress&#39;</inlineHelpText>
    <label>In Progress Reason</label>
    <type>TextArea</type>
</CustomField>