unpackaged/main/default/objects/Case/fields/In_Progress_Reason_Wellness__c.field-meta.xml
<CustomField>
    <fullName>In_Progress_Reason_Wellness__c</fullName>
    <label>In Progress Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Modified Quarantine (First Responders &amp; Healthcare Only)</fullName>
            </value>
            <value>
                <fullName>Stay at Home Order</fullName>
            </value>
            <value>
                <fullName>Waiting to Hear from HRBP</fullName>
            </value>
            <value>
                <fullName>Waiting_to_Hear_from_Survey_Respondent</fullName>
                <label>Waiting to Hear from Survey Respondent</label>
            </value>
            <value>
                <fullName>Survey Answer Clarification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>