unpackaged/main/default/objects/Case/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Airport Towers</fullName>
            </value>
            <value>
                <fullName>Citrus Towers MSS</fullName>
            </value>
            <value>
                <fullName>Citrus Towers Psych</fullName>
            </value>
            <value>
                <fullName>La Quinta</fullName>
            </value>
            <value>
                <fullName>Riverbrock</fullName>
            </value>
            <value>
                <fullName>Women&#39;s Health</fullName>
            </value>
            <value>
                <fullName>Citrus Towers Triage</fullName>
            </value>
            <value>
                <fullName>Hulen Place</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>