unpackaged/main/default/objects/Case/fields/Message_ID__c.field-meta.xml
<CustomField>
    <fullName>Message_ID__c</fullName>
    <description>Message ID from EPIC - to uniquely identify an Inbasket Message.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Message ID from EPIC - to uniquely identify an Inbasket Message.</inlineHelpText>
    <label>Message ID</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>