unpackaged/main/default/objects/Case/fields/Message_Type__c.field-meta.xml
<CustomField>
    <fullName>Message_Type__c</fullName>
    <description>Message Type from Epic Inbasket message</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Message Type from Epic Inbasket message</inlineHelpText>
    <label>Message Type</label>
    <length>55</length>
    <type>Text</type>
</CustomField>