unpackaged/main/default/objects/Case/fields/of_Call_Attempts__c.field-meta.xml
<CustomField>
    <fullName>of_Call_Attempts__c</fullName>
    <defaultValue>0</defaultValue>
    <label># of Call Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>