unpackaged/main/default/objects/Case/fields/Patient_at_Time_of_Case_Creation__c.field-meta.xml
<CustomField>
    <fullName>Patient_at_Time_of_Case_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Patient at Time of Case Creation</label>
    <type>Checkbox</type>
</CustomField>