unpackaged/main/default/objects/Case/fields/Photo_on_Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Photo_on_Related_Account__c</fullName>
    <description>Checkbox that checks to see whether a</description>
    <formula>Account.Account_Has_Photo__c</formula>
    <label>Photo on Related Account</label>
    <type>Checkbox</type>
</CustomField>