unpackaged/main/default/objects/Case/fields/Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Language__c</fullName>
    <description>Preferred language chosen by consumer when they submitted web form</description>
    <inlineHelpText>Preferred language chosen by consumer when they submitted web form</inlineHelpText>
    <label>Case Preferred Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HealthCloudGA__Languages</valueSetName>
    </valueSet>
</CustomField>