unpackaged/main/default/objects/Case/fields/Reason_for_Call__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Call__c</fullName>
    <description>Reason for Call from Epic Inbasket record.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Reason for Call from Epic Inbasket record.</inlineHelpText>
    <label>Reason for Call</label>
    <length>55</length>
    <type>Text</type>
</CustomField>