unpackaged/main/default/objects/Case/fields/Record_Type_Text__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Text__c</fullName>
    <defaultValue>$RecordType.DeveloperName</defaultValue>
    <description>Text field for storing Record Type developer name; we use this to filter Cases for the Timeline</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Text field for storing Record Type developer name; we use this to filter Cases for the Timeline</inlineHelpText>
    <label>Record Type Text</label>
    <length>55</length>
    <type>Text</type>
</CustomField>