unpackaged/main/default/objects/Case/fields/Routing_Comments__c.field-meta.xml
<CustomField>
    <fullName>Routing_Comments__c</fullName>
    <description>Routing Comments from Epic Inbasket record.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Routing Comments from Epic Inbasket record.</inlineHelpText>
    <label>Routing Comments</label>
    <length>254</length>
    <type>Text</type>
</CustomField>