unpackaged/main/default/objects/Case/fields/Total_Active_Case_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Active_Case_Time__c</fullName>
    <formula>If(IsNull(ClosedDate), 

IF(FLOOR(Now() - CreatedDate)&lt;10,&quot;0&quot;,&quot;&quot;) &amp; TEXT( FLOOR(Now() - CreatedDate)) &amp; &quot; Days &quot; &amp; 
IF(FLOOR(MOD((Now() - CreatedDate)*24,24))&lt;10,&quot;0&quot;,&quot;&quot;) &amp; TEXT( FLOOR(MOD((Now() - CreatedDate)*24,24))) &amp;&quot; Hours &quot; &amp; 
IF(ROUND(MOD((Now() - CreatedDate)*1440,60),0)&lt;10,&quot;0&quot;,&quot;&quot;) &amp; TEXT( ROUND(MOD((Now() - CreatedDate)*1440,60),0)) &amp;&quot; Minutes &quot;, 

IF(FLOOR(ClosedDate - CreatedDate)&lt;10,&quot;0&quot;,&quot;&quot;) &amp; TEXT( FLOOR(ClosedDate - CreatedDate)) &amp; &quot; Days &quot; &amp; 
IF(FLOOR(MOD((ClosedDate - CreatedDate)*24,24))&lt;10,&quot;0&quot;,&quot;&quot;) &amp; TEXT( FLOOR(MOD((ClosedDate - CreatedDate)*24,24))) &amp;&quot; Hours &quot; &amp; 
IF(ROUND(MOD((ClosedDate - CreatedDate)*1440,60),0)&lt;10,&quot;0&quot;,&quot;&quot;) &amp; TEXT( ROUND(MOD((ClosedDate - CreatedDate)*1440,60),0)) &amp;&quot; Minutes &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Active Case Time</label>
    <type>Text</type>
</CustomField>