unpackaged/main/default/objects/Case/fields/Webform_ZIP__c.field-meta.xml
<CustomField>
    <fullName>Webform_ZIP__c</fullName>
    <description>Field showing the ZIP code provided by webform submission.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Webform ZIP</label>
    <length>12</length>
    <type>Text</type>
</CustomField>