unpackaged/main/default/objects/Case/recordTypes/Call.recordType-meta.xml
<RecordType>
    <fullName>Call</fullName>
    <active>true</active>
    <businessProcess>Call Center Support Process</businessProcess>
    <description>Record type to handle inbound and outbound calls</description>
    <label>Call</label>
</RecordType>