unpackaged/main/default/objects/Case/recordTypes/Issue.recordType-meta.xml
<RecordType>
    <fullName>Issue</fullName>
    <active>true</active>
    <businessProcess>Call Center Support Process</businessProcess>
    <description>Record Type to track consumer complaints and issues</description>
    <label>Issue</label>
</RecordType>