unpackaged/main/default/objects/Case/recordTypes/VM_and_Fax_type.recordType-meta.xml
<RecordType>
    <fullName>VM_and_Fax_type</fullName>
    <active>true</active>
    <businessProcess>Call Center Support Process</businessProcess>
    <description>Record type to handle voicemails and faxes routed through email 2 case</description>
    <label>VM and Fax type</label>
</RecordType>