unpackaged/main/default/objects/Case/recordTypes/Webform.recordType-meta.xml
<RecordType>
    <fullName>Webform</fullName>
    <active>true</active>
    <businessProcess>Call Center Support Process</businessProcess>
    <description>Webform submission cases</description>
    <label>Webform</label>
</RecordType>