unpackaged/main/default/objects/Case/recordTypes/WebformCase.recordType-meta.xml
<RecordType>
    <fullName>WebformCase</fullName>
    <active>true</active>
    <businessProcess>Call Center Support Process</businessProcess>
    <description>Record type to handle inbound webform submissions that require manual follow-up</description>
    <label>WebformCase</label>
</RecordType>