unpackaged/main/default/objects/Case/listViews/Escalated_Cases.listView-meta.xml
<ListView>
    <fullName>Escalated_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Escalated_Reason__c</columns>
    <columns>Total_Active_Case_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Escalated</value>
    </filters>
    <label>Escalated Cases</label>
</ListView>