unpackaged/main/default/objects/Case/listViews/Ortho_Web_Form_Appointment_Request.listView-meta.xml
<ListView>
    <fullName>Ortho_Web_Form_Appointment_Request</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Total_Active_Case_Time__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Campaign__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Ortho Web Form Appointment Request</label>
</ListView>