unpackaged/main/default/objects/Case/listViews/Stale_Cases.listView-meta.xml
<ListView>
    <fullName>Stale_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>Total_Active_Case_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.LAST_UPDATE_DATE_ONLY</field>
        <operation>lessOrEqual</operation>
        <value>LAST_N_DAYS:3</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>Total_Active_Case_Time__c</field>
        <operation>greaterThan</operation>
        <value>100 days</value>
    </filters>
    <label>Stale Cases</label>
</ListView>