unpackaged/main/default/objects/Case/listViews/Voicemail_Fax_Follow_up.listView-meta.xml
<ListView>
    <fullName>Voicemail_Fax_Follow_up</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.VM_and_Fax_type</value>
    </filters>
    <label>Voicemail &amp; Fax Follow-up</label>
</ListView>